--- a/css/theme/night.css
+++ b/css/theme/night.css
@@ -37,7 +37,10 @@ body {
  * HEADERS
  *********************************************/
 .reveal h1,
-.reveal h2,
+.reveal h2,{
+	
+
+}
 .reveal h3,
 .reveal h4,
 .reveal h5,
