--- a/css/reveal.css
+++ b/css/reveal.css
@@ -414,14 +414,16 @@ body {
  * PROGRESS BAR
  *********************************************/
 .reveal .progress {
-  position: absolute;
+  position: fixed;
   display: none;
-  height: 3px;
-  width: 100%;
+  height: 2px;
+  width: 70%;
   bottom: 0;
+  right: 0;
   left: 0;
   z-index: 10;
   background-color: rgba(0, 0, 0, 0.2);
+  margin: 10px auto;
   color: #fff; }
 
 .reveal .progress:after {
@@ -429,7 +431,7 @@ body {
   display: block;
   position: absolute;
   height: 10px;
-  width: 100%;
+  width: 70%;
   top: -10px; }
 
 .reveal .progress span {
@@ -437,7 +439,7 @@ body {
   height: 100%;
   width: 0px;
   background-color: currentColor;
-  transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
+  transition: width 450ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
 
 /*********************************************
  * SLIDE NUMBER
