--- a/css/theme/black.css
+++ b/css/theme/black.css
@@ -38,6 +38,7 @@ body {
 /*********************************************
  * HEADERS
  *********************************************/
+
 .reveal h1,
 .reveal h2,
 .reveal h3,
@@ -55,19 +56,16 @@ body {
   word-wrap: break-word; }
 
 .reveal h1 {
-  font-size: 2.5em; }
+  font-size: 2.5em;
+	text-shadow: none; }
 
-.reveal h2 {
-  font-size: 1.6em; }
+
 
 .reveal h3 {
   font-size: 1.3em; }
 
 .reveal h4 {
   font-size: 1em; }
-
-.reveal h1 {
-  text-shadow: none; }
 
 /*********************************************
  * OTHER
@@ -122,6 +120,9 @@ body {
 .reveal dd {
   margin-left: 40px; }
 
+.reveal questions {
+	
+}
 .reveal blockquote {
   display: block;
   position: relative;
