--- a/css/theme/white.css
+++ b/css/theme/white.css
@@ -46,16 +46,16 @@ body {
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #222;
-  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-family: "Verdana", Geneva, sans-serif;
   font-weight: 600;
   line-height: 1.2;
   letter-spacing: normal;
-  text-transform: uppercase;
+  text-transform: ;
   text-shadow: none;
   word-wrap: break-word; }
 
 .reveal h1 {
-  font-size: 2.5em; }
+  font-size: 3em; }
 
 .reveal h2 {
   font-size: 1.6em; }
@@ -73,7 +73,7 @@ body {
  * OTHER
  *********************************************/
 .reveal p {
-  margin: 20px 0;
+  margin: 18px 0;
   line-height: 1.3; }
 
 /* Ensure certain elements are never larger than the slide itself */
